--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -21,8 +21,6 @@
     @footer-dark: #23282C;
 @color: #484a49;
 
-@section-radius: 4px;
-
 .app {
     background: #000;
     font-family: "Roboto", Helvetica, Arial, sans-serif;
@@ -35,9 +33,8 @@
 
 /* @group <header> & <footer> & <article> */
 section > header {
-    .linear-gradient(top, ~','@theme, ~','@theme-dark);
-    .box-shadow(~"inset 0 1px 0 rgba(255,255,255,0.4), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5)");
-    .border-radius(@section-radius @section-radius 0px 0px);
+    background-color: @theme-dark;
+    .box-shadow(~"inset 0 1px 0 rgba(255,255,255,0.3), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5)");
 
     & .title {
         color: #fff;
@@ -51,13 +48,12 @@ section > header {
 }
 
 section > footer {
-    .linear-gradient(top, ~','@footer 0%, ~','@footer-dark 60%);
-    .border-radius(0px 0px @section-radius @section-radius);
+    background-color: @footer-dark;
     .box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.8), inset 0 2px 0 rgba(255,255,255,0.05)");
 }
 
 section > nav.groupbar {
-    .linear-gradient(top, ~','@footer-dark 0%, ~','@footer 60%);
+    background-color: @footer;
 }
 
 section > article { background: #f4f5f5; }
@@ -74,7 +70,7 @@ header nav {
     }
 
     &.button a {
-        border-radius: @section-radius;
+        // border-radius: @section-radius;
         .linear-gradient(top, ~','rgba(0,0,0,0.0), ~','rgba(0,0,0,0.1));
         box-shadow: 0 1px 0 rgba(255,255,255,0.2), inset 0 0 3px rgba(0,0,0,0.3), inset 0 1px 1px rgba(0, 0, 0, .5);
         &:active { background: rgba(0,0,0,0.2); }
@@ -217,52 +213,61 @@ a.button {
 /* @group <form> */
 @box-shadow-form: ~'inset 0 1px 2px rgba(0,0,0,0.1)';
 @box-shadow-form-active: ~'inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef';
-
-@border-radius-form: 2px;
+@form-border-radius: 1px;
 label { color: #999; }
 
-input, textarea, select {
+input[type=text],  textarea, select {
     border: 1px solid #ccc;
-    .border-radius(@border-radius-form);
+    .border-radius(@form-border-radius);
+    .box-shadow(@box-shadow-form);
     color: #858585;
     font-family: Helvetica, Arial, sans-serif;
-    .box-shadow(@box-shadow-form);
 
     &:focus {
         color: #484a49;
         border-color: @theme;
-        .box-shadow(0 0 6px @theme-light);
+        .box-shadow(0 0 1px @theme-light);
+    }
+
+    &[disabled] {
+        background: #f00;
     }
 }
 
 .select:after {
     background: #ccc;
     color: white;
-    border-top-right-radius: @border-radius-form;
-    border-bottom-right-radius: @border-radius-form;
+    border-top-right-radius: @form-border-radius;
+    border-bottom-right-radius: @form-border-radius;
 }
 
 
 
 /* @group range */
-
-input[type="range"]:not(.checkbox) {
-    background-color: #c7c7c7;
-    .border-radius(@border-radius-form);
+input[type=range] {
     .box-shadow(@box-shadow-form);
+    .border-radius(@form-border-radius);
 
-    &:active { .box-shadow(none); }
+
+    &:not(.checkbox) {
+        background-color: #c7c7c7;
+        &:active { background-color: @theme-light;  }
+    }
+
+    &.checkbox {
+        background-color: #aaaaaa;
+        color: rgba(255,255,255,0.6);
+        &.active { background-color: @theme-light; }
+    }
 
     &::-webkit-slider-thumb {
-        .border-radius(12px);
-        background: #a0a0a0;
-    }
-    &:active::-webkit-slider-thumb {
-        .box-shadow(0px 0px 4px @theme-light);
-        .linear-gradient(top, ~','@theme 0%, ~','@theme-dark 100%);
-    }
-}
+        border-radius: @form-border-radius;
+        box-shadow:0px 1px 2px 1px rgba(0,0,0,0.3);
+        background: #fff; }
 
+    &::-webkit-slider-thumb::after {
+        background: rgb(234,234,234); }
+}
 /* @end */
 
 /* @group .progress */
@@ -275,12 +280,13 @@ input[type="range"]:not(.checkbox) {
     }
 
     & .bar {
+        .box-shadow(@box-shadow-form);
         background: #c7c7c7;
-        .border-radius(@border-radius-form);
+        .border-radius(@form-border-radius);
 
         & .value {
-            .linear-gradient(top, ~','@theme-light 0%, ~','@theme-dark 100%);
-            .border-radius(@border-radius-form);
+            background-color: @theme-light;
+            .border-radius(@form-border-radius);
 
             & .label {
                 float: right;
