--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -21,6 +21,9 @@
     @footer-dark: #23282C;
 @color: #484a49;
 
+@form-border-radius: 2px;
+
+
 .app {
     background: #000;
     font-family: "Roboto", Helvetica, Arial, sans-serif;
@@ -200,8 +203,9 @@ aside .list {
 
 /* @group .button */
 a.button {
-    .border-radius(2px);
-    .box-shadow(~"inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3), inset 0 2px 0 rgba(255,255,255, 0.2)");
+    .border-radius(@form-border-radius);
+    .box-shadow(~"inset 1px 0 0 rgba(0,0,0,0.2), inset 0 1px 0 rgba(0,0,0,0.2), inset -1px 0 0 rgba(0,0,0,0.2), inset 0 -1px 0 rgba(0,0,0,0.2), inset 0 2px 0 rgba(255,255,255, 0.2)");
+
     font-weight: bold;
     text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
 
@@ -213,15 +217,16 @@ a.button {
 /* @group <form> */
 @box-shadow-form: ~'inset 0 1px 2px rgba(0,0,0,0.1)';
 @box-shadow-form-active: ~'inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef';
-@form-border-radius: 1px;
+@form-border-color: #D0D4C6;
 label { color: #999; }
 
-input[type=text],  textarea, select {
-    border: 1px solid #ccc;
+input:not([type=range]), textarea, select {
+    border: 1px solid @form-border-color;
     .border-radius(@form-border-radius);
-    .box-shadow(@box-shadow-form);
+    // .box-shadow(@box-shadow-form);
     color: #858585;
     font-family: Helvetica, Arial, sans-serif;
+    background: #fff;
 
     &:focus {
         color: #484a49;
@@ -230,24 +235,22 @@ input[type=text],  textarea, select {
     }
 
     &[disabled] {
-        background: #f00;
+        background: #F4F5F0;
+        color: #bbb;
     }
 }
 
 .select:after {
-    background: #ccc;
+    background: @form-border-color;
     color: white;
     border-top-right-radius: @form-border-radius;
     border-bottom-right-radius: @form-border-radius;
 }
 
-
-
 /* @group range */
 input[type=range] {
     .box-shadow(@box-shadow-form);
     .border-radius(@form-border-radius);
-
 
     &:not(.checkbox) {
         background-color: #c7c7c7;
@@ -266,7 +269,7 @@ input[type=range] {
         background: #fff; }
 
     &::-webkit-slider-thumb::after {
-        background: rgb(234,234,234); }
+        background: #ddd; }
 }
 /* @end */
 
@@ -305,17 +308,21 @@ input[type=range] {
 /* @group .bubble */
 .bubble {
     color: #fff;
-    .border-radius(2px);
+    .border-radius(8px);
 
-    &.count { .linear-gradient(top, ~','@theme-light 0%, ~','@theme-dark 100%);  }
+    &.count { background: @theme; }
 }
+    header .count {
+        background: @footer !important;
+    }
+
     footer .bubble {
         .box-shadow(~'inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)');  }
-
 
     article .list .bubble {
         .box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)');
     }
+
     aside .list .bubble { background: rgba(0,0,0,0.25); }
 /* @end */
 
