--- a/src/stylesheets/css/Lungo.widgets.form.css
+++ b/src/stylesheets/css/Lungo.widgets.form.css
@@ -10,19 +10,21 @@
 /* COLORS */
 form {
   margin: 3%;
+  /* @group search */
+
 }
 form.wrapper input:not([type=checkbox]),
 form textarea,
 form select {
   margin: 3px 0px 3px 0px;
 }
-form.rounded input:not([type=checkbox]),
+form.rounded input:not([type=range]),
 form.rounded textarea,
 form.rounded select {
   width: 94%;
   padding: 1.0% 3% ;
 }
-form.rounded input:not([type=checkbox]):first-of-type,
+form.rounded input:not([type=range]):first-of-type,
 form.rounded textarea:first-of-type,
 form.rounded select:first-of-type {
   -webkit-border-radius: 2px 2px 0px 0px;
@@ -32,7 +34,7 @@ form.rounded select:first-of-type {
   -moz-background-clip: padding;
   background-clip: padding-box;
 }
-form.rounded input:not([type=checkbox]):last-of-type,
+form.rounded input:not([type=range]):last-of-type,
 form.rounded textarea:last-of-type,
 form.rounded select:last-of-type {
   -webkit-border-radius: 0px 0px 2px 2px;
@@ -42,88 +44,95 @@ form.rounded select:last-of-type {
   -moz-background-clip: padding;
   background-clip: padding-box;
 }
-input[type=text],
-textarea,
-select {
+form label:not(.select) {
+  font-size: 13px;
+  margin-bottom: 3px;
   display: block;
-  width: 96%;
-  padding: 0 2%;
+}
+form input,
+form textarea,
+form select,
+form .progress {
+  margin-bottom: 8px;
+}
+form input:not([type=range]),
+form textarea,
+form select {
+  display: block;
+  width: 94%;
+  padding: 0 3%;
   height: 30px;
-  font-size: 14px;
+  font-size: 15px;
+  line-height: 14px;
   font-weight: bold;
   -webkit-appearance: none;
   -webkit-user-select: text;
   -webkit-font-smoothing: antialiased;
 }
-textarea {
+form textarea {
   padding-top: 1.5%;
   min-height: 48px;
 }
-/* @group search */
-input[type=search] {
+form input[type=search] {
   width: 85%;
   display: inline-block;
 }
-input[type=search]  + .button {
+form input[type=search]  + .button {
   float: right;
   padding: 0px;
   width: 13%;
   height: 30px;
 }
-input[type=search]  + .button .icon {
+form input[type=search]  + .button .icon {
   top: -3px;
   float: none;
 }
-/* @end */
-/* @group select */
-select {
+form select {
   width: 100%;
   height: 30px;
 }
-label.select {
+form label.select {
   position: relative;
   display: inline-block;
   width: 100%;
 }
-.select:after {
+form .select:after {
   text-align: center;
   position: absolute;
-  top: 0;
+  top: 3px;
   right: 0;
   bottom: 0;
   height: 30px;
   width: 30px;
   content: "▼";
   pointer-events: none;
-  line-height: 31px;
+  line-height: 33px;
 }
-.no-pointer-events .select:after {
+form .no-pointer-events .select:after {
   content: none;
 }
-/* @end */
-input[type=range] {
+form input[type=range] {
   -webkit-appearance: none;
   outline: none;
 }
-input[type=range]:not(.checkbox) {
+form input[type=range]:not(.checkbox) {
   height: 12px;
   width: 100%;
   padding: 0px;
-  margin: 8px 0 12px 0;
+  margin-top: 2px;
   border: 0;
   cursor: ew-resize;
 }
-input[type=range]:not(.checkbox)::-webkit-slider-thumb {
+form input[type=range]:not(.checkbox)::-webkit-slider-thumb {
   top: -1px;
 }
-input[type=range].checkbox {
-  background: #aaaaaa;
+form input[type=range].checkbox {
   width: 70px;
   height: 30px;
   padding: 1px 2px;
   font-family: 'lungojsicon';
 }
-input[type=range].checkbox:after {
+form input[type=range].checkbox:after {
   content: "\0055";
   position: relative;
   float: right;
@@ -131,12 +140,13 @@ input[type=range].checkbox:after {
   padding: 0 8px;
   font-size: 1.5em;
 }
-input[type=range].checkbox.active:after {
+form input[type=range].checkbox.active:after {
   float: left;
   content: "\0051";
   font-weight: bold;
+  font-size: 1.6em;
 }
-input[type=range]::-webkit-slider-thumb {
+form input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 30px;
   height: 24px;
@@ -145,50 +155,50 @@ input[type=range]::-webkit-slider-thumb {
   margin: 2px 2px 2px 2px;
   border: none;
 }
-input[type=range]::-webkit-slider-thumb::after {
-  width: 13px;
-  height: 13px;
+form input[type=range]::-webkit-slider-thumb::after {
+  width: 12px;
+  height: 12px;
   display: block;
   content: "";
   position: relative;
-  border-radius: 7.5px;
+  border-radius: 8px;
   z-index: 9;
-  top: 5px;
+  top: 6px;
   left: 9px;
 }
-/* @group range */
-/* @end */
-/* @group progress */
-.progress {
+form .progress {
   width: 100%;
   margin-bottom: 8px;
 }
-.progress .labels {
+form .progress .labels {
   font-size: 1.0em;
   display: block;
 }
-.progress .labels span:last-child {
+form .progress .labels span:last-child {
   float: right;
 }
-.progress .bar {
+form .progress .bar {
   height: 12px;
   line-height: 12px;
   display: block;
 }
-.progress .bar .value {
+form .progress .bar .value {
   display: block;
   height: inherit;
   width: 0%;
   -webkit-transition: width 500ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -moz-transition: width 500ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -ms-transition: width 500ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -o-transition: width 500ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition: width 500ms cubic-bezier(0.39, 0.575, 0.565, 1);
 }
-.progress .bar .value .label {
+form .progress .bar .value .label {
   float: right;
   margin-right: 4px;
   font-size: 0.75em;
 }
-/* @end */
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  .custom-select select {
+  form .custom-select select {
     padding-right: 30px;
   }
 }
