--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -10,19 +10,19 @@
 @import "constants.less";
 // @import "lungo.theme.default.font.less";
 
-
 @theme: #2A95D3;
 @theme-light:  #39ABE1;
 @theme-dark: #1984C2;
-// @theme: #2C8BCA;
-// @theme-light:  #2C8BCA;
-// @theme-dark: #154F93;
-@footer: #292F34;
-    @footer-dark: #23282C;
+
+@second: #222;
+    @second-dark: #111;
+    @second-current: #111;
+    @second-nav: #888;
+    @second-nav-active: #fff;
+
 @color: #484a49;
 
-@form-border-radius: 2px;
-
+@form-border-radius: 1px;
 
 .app {
     background: #000;
@@ -51,12 +51,17 @@ section > header {
 }
 
 section > footer {
-    background-color: @footer-dark;
-    .box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.8), inset 0 2px 0 rgba(255,255,255,0.05)");
-}
+    background-color: @second;
+    .box-shadow(inset 0 3px 0 #333);
+    & > nav a {
+        .box-shadow(1px 0 0 #151515);
+        &.current {
+            color:  @second-nav-active;
+            background: @second-current;
+            .box-shadow(~"-1px 0 0 #252525, 1px 0 0 #252525, inset 0 3px 0 #2A95D3");
+        }
+    }
 
-section > nav.groupbar {
-    background-color: @footer;
 }
 
 section > article { background: #f4f5f5; }
@@ -73,36 +78,33 @@ header nav {
     }
 
     &.button a {
-        // border-radius: @section-radius;
+        border-radius: @form-border-radius;
         .linear-gradient(top, ~','rgba(0,0,0,0.0), ~','rgba(0,0,0,0.1));
         box-shadow: 0 1px 0 rgba(255,255,255,0.2), inset 0 0 3px rgba(0,0,0,0.3), inset 0 1px 1px rgba(0, 0, 0, .5);
         &:active { background: rgba(0,0,0,0.2); }
     }
 }
 
-footer nav a.current {
-    background: #000;
-    .box-shadow(~"-1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)");
+section > nav.groupbar {
+    background-color: @second;
+    & > a.current { .box-shadow(inset 0 -3px 0 @theme); }
 }
 
-footer nav a, nav.groupbar a{
-    color: rgba(0,0,0,0.7);
-    &.current {
-        color:  #fff;}
+footer > nav > a, nav.groupbar > a{
+    color: @second-nav;
+    &.current { color:  @second-nav-active; }
 }
-
-nav.groupbar a.current { .box-shadow(inset 0 -3px 0 @theme); }
 
 /* @end */
 
 /* @group <aside> */
 aside {
     color: #fff;
-    background: @footer;
+    background: @second;
 
     & header, footer {
         .box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1)");
-        background: @footer-dark; }
+        background: @second-dark; }
 
     & article { background: none; }
 
@@ -115,15 +117,6 @@ section.aside {
     .box-shadow(~"-4px 0 8px rgba(0,0,0,0.5)");
     &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.5)"); }
 }
-/*
-@media handheld, only screen and (min-width: 768px) {
-    section.current, section.show {
-        .box-shadow(~"-4px 0 8px rgba(0,0,0,0.5)");
-        &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.5)"); }
-    }
-}
-*/
-/* @end */
 
 /* @group .list */
 @list-border: #ddd;
@@ -139,13 +132,13 @@ section.aside {
         &, & a { color: @list-color; }
 
         &.contrast {
-            background: @footer;
+            background: @second;
             color: #fff;
         }
 
         &.highlight { background: @list-border; }
         &.anchor {
-            background: @footer;
+            background: @second;
             border-bottom: none;
             &, & a { color: #fff !important; }
         }
@@ -180,7 +173,7 @@ aside .list {
 
 /* @group widgets */
 .splash {
-    background: @footer;
+    background: @second;
     color: #fff;
     text-shadow: 0 1px 0px rgba(0,0,0,0.2);
 }
@@ -313,11 +306,12 @@ input[type=range] {
     &.count { background: @theme; }
 }
     header .count {
-        background: @footer !important;
+        background: @second !important;
     }
 
     footer .bubble {
-        .box-shadow(~'inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)');  }
+        .box-shadow(~'inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)');
+    }
 
     article .list .bubble {
         .box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)');
