--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -10,15 +10,18 @@
 @import "constants.less";
 // @import "lungo.theme.default.font.less";
 
-@theme: #2A95D3;
-@theme-light:  #39ABE1;
-@theme-dark: #1984C2;
+@theme: #0093D5;
+    @theme-light:  #39ABE1;
 
-@second: #222;
-    @second-dark: #111;
-    @second-current: #111;
-    @second-nav: #888;
-    @second-nav-active: #fff;
+@theme: #2A95D3;
+    @theme-light:  #25AEEB;
+
+@theme-dark: #222;
+    @theme-dark-current: #111;
+    @theme-dark-nav: #888;
+    @theme-dark-nav-active: #fff;
+
+@aside: #191919;
 
 @color: #484a49;
 
@@ -30,14 +33,14 @@
 }
 
 .theme, li.theme, a.theme {
-    background: @theme;
-    &:active { background: @theme-dark;}
+    background: @theme-light;
+    &:active { background: @theme;}
 }
 
 /* @group <header> & <footer> & <article> */
 section > header {
-    background-color: @theme-dark;
-    .box-shadow(~"inset 0 1px 0 rgba(255,255,255,0.3), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5)");
+    background-color: @theme;
+    .box-shadow(~"inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5)");
 
     & .title {
         color: #fff;
@@ -51,13 +54,13 @@ section > header {
 }
 
 section > footer {
-    background-color: @second;
+    background-color: @theme-dark;
     .box-shadow(inset 0 3px 0 #333);
     & > nav a {
         .box-shadow(1px 0 0 #151515);
         &.current {
-            color:  @second-nav-active;
-            background: @second-current;
+            color:  @theme-dark-nav-active;
+            background: @theme-dark-current;
             .box-shadow(~"-1px 0 0 #252525, 1px 0 0 #252525, inset 0 3px 0 #2A95D3");
         }
     }
@@ -65,6 +68,43 @@ section > footer {
 }
 
 section > article { background: #f4f5f5; }
+
+aside {
+    color: #fff;
+    background: @aside;
+
+    & header, footer {
+        background: @theme-dark-current;
+        text-shadow: none;
+    }
+    & header {
+        .box-shadow(inset 0 -1px 0 rgba(0,0,0,0.2));
+    }
+    & article { background: none; }
+
+    & nav {
+        & .icon {color:white;}
+    }
+
+    & .list li {
+        background: none;
+        border-bottom-color: @theme-dark;
+
+        &.current {
+            background: @theme;
+            border-bottom-color: @theme;
+
+            & strong, & small, & .icon { color: #fff; }
+        }
+        & strong, & small, & .icon { color: @theme-dark-nav; }
+    }
+}
+
+section.aside {
+    .box-shadow(~"-1px 0 0 rgba(0,0,0,0.2)");
+    &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.5)"); }
+}
+
 /* @end */
 
 /* @group <nav> */
@@ -86,37 +126,19 @@ header nav {
 }
 
 section > nav.groupbar {
-    background-color: @second;
+    background-color: @theme-dark;
     & > a.current { .box-shadow(inset 0 -3px 0 @theme); }
 }
 
 footer > nav > a, nav.groupbar > a{
-    color: @second-nav;
-    &.current { color:  @second-nav-active; }
+    color: @theme-dark-nav;
+    &.current { color:  @theme-dark-nav-active; }
 }
 
 /* @end */
 
 /* @group <aside> */
-aside {
-    color: #fff;
-    background: @second;
 
-    & header, footer {
-        .box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1)");
-        background: @second-dark; }
-
-    & article { background: none; }
-
-    & nav {
-        & .icon {color:white;}
-    }
-}
-
-section.aside {
-    .box-shadow(~"-4px 0 8px rgba(0,0,0,0.5)");
-    &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.5)"); }
-}
 
 /* @group .list */
 @list-border: #ddd;
@@ -127,18 +149,16 @@ section.aside {
         background: #fff;
         border-bottom: 1px inset @list-border;
 
-        &:last-child { border-bottom: none; }
-
         &, & a { color: @list-color; }
 
         &.contrast {
-            background: @second;
+            background: @theme-dark;
             color: #fff;
         }
 
         &.highlight { background: @list-border; }
         &.anchor {
-            background: @second;
+            background: @theme-dark;
             border-bottom: none;
             &, & a { color: #fff !important; }
         }
@@ -155,25 +175,13 @@ section.aside {
     }
 }
 
-aside .list {
-    & li {
-            background: none;
-            border-top: 1px solid rgba(255,255,255,0.05);
-            border-bottom: 1px solid ;
 
-            &.current {
-                border-top-color: @theme;
-                .linear-gradient(top, ~','@theme-light 25%, ~','@theme-dark 100%);}
-            & strong, & small, & .icon { color: #fff; }
-            & strong { text-shadow: 0 1px 1px rgba(0,0,0,0.5); }
-        }
-    }
 
 /* @end */
 
 /* @group widgets */
 .splash {
-    background: @second;
+    background: @theme-dark;
     color: #fff;
     text-shadow: 0 1px 0px rgba(0,0,0,0.2);
 }
@@ -306,7 +314,7 @@ input[type=range] {
     &.count { background: @theme; }
 }
     header .count {
-        background: @second !important;
+        background: @theme-dark !important;
     }
 
     footer .bubble {
